#275 Fix too long pointer bug

--- a/src/style/components/molecules/map-pointer.sass
+++ b/src/style/components/molecules/map-pointer.sass
@@ -1,6 +1,7 @@
 $diameter: 16px
 $border: 2px
 $line-width: 2px
+$footer-height: 72px
 
 .m-pointer
   position: relative
@@ -18,11 +19,11 @@ $line-width: 2px
     content: ''
     position: absolute
     top: calc((#{$diameter} - #{2 * $border} - #{$line-width}) / 2)
-    left: -100vw
+    left: calc(-50vw + (#{$diameter - $border - $line-width}) / 2)
     z-index: 6
 
     display: block
-    width: 200vw
+    width: 100vw
     height: $line-width
     background: rgba(black, 0.6)
 
@@ -31,10 +32,10 @@ $line-width: 2px
     content: ''
     position: absolute
     left: calc((#{$diameter} - #{2 * $border} - #{$line-width}) / 2)
-    top: -100vh
+    top: calc(-50vh + (#{$diameter - $border - $line-width}) / 2)
     z-index: 6
 
     display: block
     width: $line-width
-    height: 200vh
+    height: calc(100vh - #{$footer-height})
     background: rgba(black, 0.6)
